Немного подправил
Но преф. поиск всё ещё не работает(